fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -92,22 +92,29 @@ main h1{
 }
 .container{
     display: flex;
-    margin-left: 15vh;
+   justify-content: center;
+   flex-wrap: nowrap;
 }
 .card{
     color: white;
     background: rgb(10, 1, 32);
-    width: 270px;
-    height: 76vh;
-    margin: 10px;
+    width: auto;
+    height: auto;
+    margin: 30px;
     border-radius: 3px;
     border: 1px solid whitesmoke;
     box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, .1);
     transition: 1s;
+    display: block;
+    justify-content: center;
 }
 .card:hover{
     transform:scale(1.1);
     z-index: 1;
+    cursor: pointer;
+}
+.card h2{
+    padding: 10px;
 }
 .card-image{
     background-color: #8015be;
@@ -122,9 +129,12 @@ main h1{
     padding: 15px 20px;
     display: block;
     text-align: center;
-    margin-top: 10px;
+    margin: 20px 50px;
     text-decoration: none;
    
+}
+.card p{
+    padding: 10px;
 }
 .excel{
     background-image: url("https://imgs.search.brave.com/DquRTN-OKeDYWgMgtoGUhHus5B70v4h07w9_Ruln5Hw/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9hcnRp/Y2xlcy1pbWcuc2Z0/Y2RuLm5ldC9mX2F1/dG8sdF9hcnRpY2xl/X2NvdmVyX3hsL2F1/dG8tbWFwcGluZy1m/b2xkZXIvc2l0ZXMv/My8yMDIxLzEwL1do/YXQtSXMtRXhjZWwt/YW5kLWhvdy1pdC13/b3Jrcy0xLmpwZw");
